public interface Pet {
    void setName(String name); 
    String getName();
    public void play();
}